--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,7 +9,17 @@
   "imageSize": 100,
   "commit": true,
   "commitConvention": "angular",
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "ThienNguyen666",
+      "name": "Nguyễn Chí Thiện",
+      "avatar_url": "https://avatars.githubusercontent.com/u/174235441?v=4",
+      "profile": "https://github.com/ThienNguyen666",
+      "contributions": [
+        "code"
+      ]
+    }
+  ],
   "contributorsPerLine": 7,
   "linkToUsage": true
 }
